--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     nav ul li {
     margin: 0 1.5rem ;
 }
-    nav ul il a {
+    nav ul li a {
     color: white;
     font-weight: 500;
     transition: color 0.3s;
