--- a/style.css
+++ b/style.css
@@ -110,3 +110,12 @@
     flex:1;
     min-width: 300px;
 }
+
+
+
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 2rem;
+}
